# Simple-Backup

./: .gitignore  README.md  config.example.yaml  pyproject.toml
examples/jobs/: files_archive.sh.example  postgres_dump.sh.example
src/simple_backup/: archive.py  cli.py  config.py  jobs.py  notifications.py  orchestrator.py  retention.py
tests/: test_archive.py  test_config.py  test_jobs.py  test_notifications.py  test_orchestrator.py  test_retention.py
